--- a/flower.html
+++ b/flower.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flowers 🌸</title>
+    <title>Happy Valentine's Day! 🤗</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         .container {
